# RAG

./: .gitignore  Makefile  README.md  dataset_docs_public.json  main.py  pyproject.toml
data/output/: dataset_code_public.json  dataset_docs_public.json
llm_sdk/: model.py
src/CLI/: __init__.py  cli.py
src/answer/: __init__.py  augment.py  generate_answer.py  loader.py
src/classes/: __init__.py  minimalanswer.py  minimalsearchresults.py  minimalsources.py  questions.py  ragdataset.py  studentssearchresults.py
src/ingest/: __init__.py  chunker.py  getter.py  loader.py  reranker.py  storer.py
src/recall/: __init__.py  recall_at_k.py
student/src/: __main__.py
student/src/CLI/: cli.py
student/src/answer/: augment.py  generate_answer.py  loader.py
student/src/classes/: __init__.py  minimalanswer.py  minimalsearchresults.py  minimalsources.py  questions.py  studentssearchresults.py
student/src/ingest/: chunker.py  getter.py  loader.py
student/src/llm_sdk/: __init__.py  model.py
student/src/recall/: __init__.py  recall_at_k.py
